# stellar-bet

./: README.md
backend/: Cargo.toml
backend/src/: lib.rs
frontend/: .env.example  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: BetCard.tsx  BetList.tsx  ConnectWallet.tsx  CreateBetForm.tsx
frontend/src/utils/: soroban.ts
